--- a/Temp3.html
+++ b/Temp3.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="connect">
-                <a  href="/connect/connect.html"><img id="connectImg" src="{{url_for('about.static', filename='image/connect.png') }}" alt= "sign in" ></a>
+                <a  href="/connect/connect.html"><img id="connectImg" src="login button.jpg" alt= "sign in" ></a>
             </div>
         
     </div>
@@ -67,6 +67,7 @@
             </div>
    </div>
 
+   
 
 </body>
 </html>
