--- a/cartPage.html
+++ b/cartPage.html
@@ -61,11 +61,11 @@
                     <div class="Shopping-Cart"></div>
                     <div class="checkout">
                         <h1 class="title">Checkout</h1>
-                        <p class="price" data-price="4.99">$4.99 per Juice</p>
+                        <p class="price" data-price="4.99">plese select products you want</p>
                         <p class="description">Quantity:</p>
                         <input type="text" class="quantity" value="1">
 
-                        <p class="total">Total: <span id="total">$4.99</span></p>
+                        <p class="total">Total: <span id="total"></span></p>
 
                         <button class="btn">Submit Order</button>
 
