--- a/categories.html
+++ b/categories.html
@@ -12,7 +12,7 @@
         <div class="grid-container1">
 
             <div class="logoImg">
-                <img id="logoImg" src="logo.jpg" alt="logo">
+                <img id="logoImg" src="logoimg.JPEG" alt="logo">
             </div>
 
             <div class="titleName">
@@ -49,8 +49,10 @@
             <div class="Category-details">
                 <h3 class="category-name"> cat 1</h3>
                 <p id="text">
-                    cat 1 - datelis
+                    Sports -
                     <br>
+                    <img id="sportImg" src="sportImg.jpg" alt="sport" width="15%" />
+                    <br />
                     Lowest price: 0.99$
                     <br>
                     Highest price : 99.99$
@@ -65,8 +67,10 @@
             <div class="Category-details">
                 <h3 class="category-name"> cat 2</h3>
                 <p id="text">
-                    cat 2 - datelis
+                    Home -
                     <br>
+                    <img id="homeImg" src="homeImg.jpg" alt="home" width="15%" />
+                    <br />
                     Lowest price: 0.99$
                     <br>
                     Highest price : 99.99$
@@ -76,22 +80,24 @@
 
                         <button type="submit" class="Add" onclick="addedToCart()" value="Close"> Get in</button>
                     </div>
-                <p>
+<p>
             </div><div class="Category-details">
     <h3 class="category-name"> cat 3</h3>
     <p id="text">
-        cat 3- datelis
+        Electricity -
         <br>
-        Lowest price: 0.99$
+        <img id="elcImg" src="elecImg.jfif" alt="electricity" width="15%" />
+        <br />
+        Lowest price: 9.99$
         <br>
-        Highest price : 99.99$
+        Highest price :10,000$
         <br>
         <br>
         <div class="addButton">
 
             <button type="submit" class="Add" onclick="addedToCart()" value="Close"> Get in</button>
         </div>
-    <p>
+<p>
 </div>
 
 
