--- a/cartPage.html
+++ b/cartPage.html
@@ -12,7 +12,7 @@
         <div class="grid-container1">
 
             <div class="logoImg">
-                <img id="logoImg" src="logo.jpg" alt="logo">
+                <img id="logoImg" src="logoimg.JPEG" alt="logo">
             </div>
 
             <div class="titleName">
