--- a/categories.html
+++ b/categories.html
@@ -47,7 +47,7 @@
 
             <center><h1>Categories</h1></center><br>
             <div class="Category-details">
-                <h3 class="category-name"> cat 1</h3>
+                <h3 class="category-name"> SPORTS</h3>
                 <p id="text">
                     Sports -
                     <br>
@@ -65,7 +65,7 @@
                 <p>
             </div>
             <div class="Category-details">
-                <h3 class="category-name"> cat 2</h3>
+                <h3 class="category-name"> HOME</h3>
                 <p id="text">
                     Home -
                     <br>
@@ -82,7 +82,7 @@
                     </div>
 <p>
             </div><div class="Category-details">
-    <h3 class="category-name"> cat 3</h3>
+    <h3 class="category-name"> ELECTRICITY</h3>
     <p id="text">
         Electricity -
         <br>
