project part 2 - liad html

--- a/ABOUT US.html
+++ b/ABOUT US.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="GeneralCssPage1.css">
     <link rel = "stylesheet" href = "about css.css"> 
 
     <title>About US</title>
@@ -17,7 +18,7 @@
         <div class="grid-container1">
 
             <div class="projectlogo">
-                <img id="projectlogo" src="project logo.jpeg" alt= "logo">
+                <img id="projectlogo" src="logo.jpeg" alt= "logo">
             </div>
                
             <div class="titleName">
