--- a/Business account.html
+++ b/Business account.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel = "stylesheet" href = "Business account css.css"> 
-
+    <script src="JS.js"></script>
+    
     <title>Business account</title>
 </head>
 
