--- a/contact me.html
+++ b/contact me.html
@@ -3,9 +3,9 @@
 <html>
 <head>
     <title>Contact Me |Smart Buy</title>
-    <link rel="stylesheet" href="../css/newGeneral.css">
-    <link rel="stylesheet" href="../css/contactMe.css">
-    <script src="../JS.js"></script>
+    <link rel="stylesheet" href="css/GeneralCssPage1.css">
+    <link rel="stylesheet" href="css/contact me.css">
+    <script src="JS.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -14,7 +14,7 @@
         <div class="grid-container1">
 
             <div class="logoImg">
-                <img id="logoImg" src="../image/logo.jpg" alt="logo">
+                <img id="logoImg" src="images/logo.jpg" alt="logo">
             </div>
 
             <div class="titleName">
@@ -26,20 +26,25 @@
         </div>
         <div class="nav">
 
-            <div class="navbar">
-                <br>
-                <a href="../html/eneralCssPage1" class="text">&nbsp;Home</a>
-                <a href="../html/about.html" class="text">About</a>
-                <a href="../html/Products.html" class="text">Products</a>
-                <a href="../html/Cart.html" class="text">Cart</a>
 
+            <div class= "navbar">
+                <br>
+                <a href='./mainpage.html' class="text">&nbsp;Home</a>
+                <a href='./about us.html' class="text" id="active">About</a>
+                <a href='./category.html' class="text">Products</a>
+                <a href='./uploadnewprod.html' class="text">NewProduct</a>
+                <a href='./userhistory.html' class="text">MyHistory</a>
+    
             </div>
 
             <div class="connect">
-                <br>
-                <a href="../html/connect.html"><img id="connectImg" src="../image/connect.png" alt="connect"></a>
-                <a><img id="shopImg" src="../image/shopBag.png" alt="shopBag"></a>
+
+                <a  href="./connect.html"><img id="connectImg" src="images/login button.jpg" alt= "sign in" ></a>
+                <a href="./cartpage.html"><img id="shopImg" src="images/shoppingcart.jpg" alt= "shopBag" ></a>
+
             </div>
+
+
 
         </div>
 
@@ -81,10 +86,17 @@
         <div class="footer">
             <div id="footer">
                 <br>
-                <a href="/contact_me/contact me.html" class="text">Contact Us</a>
+                <a href="./contact me.html" class="text">Contact Us</a>
+                <a href="./contact me.html" class="text">Facebook</a>
+                <a href="./contact me.html" class="text">Instagram</a>
+                <a href="./contact me.html" class="text">Privacy</a>
+                <a href="./contact me.html" class="text">Cancellation</a>
+
+
+
 
             </div>
-        </div>
+   </div>
 
 
 
