--- a/product.html
+++ b/product.html
@@ -28,17 +28,22 @@
     
     <div class="nav">
 
-           <div class= "navbar">
-                <br>
-                <a href='/home/home.html' class="text">&nbsp;Home</a>
-                <a href='/about/about.html' class="text" id="active">About</a>
-                <a href='/shop/Shop.html' class="text">Products</a>
-                <a href='/recipes/Recipes.html' class="text">Cart</a>
-            </div>
+        <div class= "navbar">
+            <br>
+            <a href='./mainpage.html' class="text">&nbsp;Home</a>
+            <a href='./about us.html' class="text" id="active">About</a>
+            <a href='./category.html' class="text">Products</a>
+            <a href='./uploadnewprod.html' class="text">NewProduct</a>
+            <a href='./userhistory.html' class="text">MyHistory</a>
 
-            <div class="connect">
-                <a  href="/connect/connect.html"><img id="connectImg" src="images/login button.jpg" alt= "sign in" ></a>
-            </div>
+        </div>
+
+        <div class="connect">
+
+            <a  href="./connect.html"><img id="connectImg" src="images/login button.jpg" alt= "sign in" ></a>
+            <a href="./cartpage.html"><img id="shopImg" src="images/shoppingcart.jpg" alt= "shopBag" ></a>
+
+        </div>
         
     </div>
 
@@ -75,11 +80,11 @@
     <div class="footer">
         <div id="footer">
             <br>
-            <a href="/contact_me/contact me.html" class="text">Contact Us</a>
-            <a href="/contact_me/contact me.html" class="text">Facebook</a>
-            <a href="/contact_me/contact me.html" class="text">Instagram</a>
-            <a href="/contact_me/contact me.html" class="text">Privacy</a>
-            <a href="/contact_me/contact me.html" class="text">Cancellation</a>
+            <a href="./contact me.html" class="text">Contact Us</a>
+            <a href="./contact me.html" class="text">Facebook</a>
+            <a href="./contact me.html" class="text">Instagram</a>
+            <a href="./contact me.html" class="text">Privacy</a>
+            <a href="./contact me.html" class="text">Cancellation</a>
 
 
 
